tests/paczka1/small_fuzzy/23542199.err
Error in line 1: SkBDYfDqt S222 59,5
Error in line 15: sCehSpJQ5m S194 40,27
Error in line 8: UYayfJ A206 61,5
